# Projet_2_docker_compose

./: .coverage  .dockerignore  .env.example  .gitignore  AIREADME.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Projet_2_Orchestration.md  README.md  coverage.xml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  docs.yml  security.yml
app_api/: Dockerfile  main.py  pyproject.toml
app_api/data/: moncsv.csv
app_api/maths/: mon_module.py
app_api/models/: models.py
app_api/modules/: connect.py  crud.py
app_front/: Dockerfile  main.py  pyproject.toml
app_front/pages/: 0_insert.py  1_read.py  2_calculs.py
docs/source/: app_api.maths.rst  app_api.models.rst  app_api.modules.rst  app_api.rst  app_front.rst  conf.py  index.rst  modules.rst
tests/: conftest.py  test_api.py  test_math_csv.py
