[project]
name = "projet2_orchestration"
version = "0.1.0"
description = "Projet 2 : Orchestration, Sécurité et Livraison Continue"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "httpx",
    "requests",
    "pandas",
    "streamlit",
    "ruff"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=app_api --cov-report=term-missing --cov-report=xml"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
]
